<?xml version="1.0"?>
<package format="3">
  <name>ros2_mqtt_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 -> MQTT bool bridge for topic 'collision'</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- External Python dep via pip -->
  <exec_depend>paho-mqtt</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

